--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-tempfile.txt
+# Ignore text (txt) files
+*.txt
+*.zip
+*.gz
+log/*.log
+log/*.log.[0-9]
+assets/photoshop/
+assets/videos/
+!assets/videos/tour_*.mp4
